--- a/css/responsive-tabs.css
+++ b/css/responsive-tabs.css
@@ -1,79 +1,8 @@
-/* Tabs container */
-.r-tabs {
-  position: relative;
-
-  background-color: #0B486B
-
-
-
-}
-
-/* Tab element */
-.r-tabs .r-tabs-nav .r-tabs-tab {
-  position: relative;
-  background-color: #0B486B;
-}
-
-/* Tab anchor */
-.r-tabs .r-tabs-nav .r-tabs-anchor {
-  display: inline-block;
-  padding: 10px 12px;
-
-
-  font-size: 14px;
-  font-weight: bold;
-  color: #CFF09E;
-}
-
-
-/* Active state tab anchor */
-.r-tabs .r-tabs-nav .r-tabs-state-active .r-tabs-anchor {
-  color: #0B486B;
-  text-shadow: none;
-
-  background-color: #A8DBA8;
-
-
-}
-
-/* Tab panel */
-.r-tabs .r-tabs-panel {
-  background-color: #A8DBA8;
-
-}
-
-/* Accordion anchor */
-.r-tabs .r-tabs-accordion-title .r-tabs-anchor {
-  display: block;
-  padding: 10px;
-
-  background-color: #0B486B;
-  color: #CFF09E;
-  font-weight: bold;
-  text-decoration: none;
-  text-shadow: 0 1px rgba(0, 0, 0, 0.4);
-  font-size: 14px;
-
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
-}
-
-/* Active accordion anchor */
-.r-tabs .r-tabs-accordion-title.r-tabs-state-active .r-tabs-anchor {
-  background-color: #CFF09E;
-  color: #0B486B;
-  text-shadow: none;
-}
-
-/* Disabled accordion button */
-.r-tabs .r-tabs-accordion-title.r-tabs-state-disabled {
-  opacity: 0.5;
-}
-
 
 .r-tabs .r-tabs-nav {
     margin: 0;
     padding: 0;
+    height: 60px;
 
 }
 
@@ -81,6 +10,7 @@
     display: inline-block;
     margin: 0;
     list-style: none;
+
 }
 
 .r-tabs .r-tabs-panel {
