ipad size works now. Still gotta do the phone size properly

--- a/css/responsive-tabs.css
+++ b/css/responsive-tabs.css
@@ -27,12 +27,24 @@
 }
 
 /* Accordion responsive breakpoint */
-@media only all and (max-width: 1000px) {
+@media all and (max-width: 760px) {
+
+
     .r-tabs .r-tabs-nav {
         display: none;
     }
 
     .r-tabs .r-tabs-accordion-title {
         display: block;
+    }
+}
+
+@media all and (min-width: 761px) and (max-width: 1000px) {
+
+    .r-tabs-nav .r-tabs-anchor {
+
+
+        font-size: 12px;
+
     }
 }
